fix layout bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 router-outlet {
