--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -7,3 +7,7 @@
   flex-direction: column;
   margin: 10px 0;
 }
+
+.spacing {
+  padding: 100px;
+}
